--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,24 @@
       // compilerOptions specified here will override those declared below,
       // but *only* in ts-node.  Useful if you want ts-node and tsc to use
       // different options with a single tsconfig.json.
-    }
+      "baseUrl": ".",
+      "paths": {
+        "@/*": [
+          "src/*"
+        ]
+      }
+    },
+    "require": [
+      "tsconfig-paths/register"
+    ]
   },
   "compilerOptions": {
     // typescript options here
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
   }
 }
