--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jest": "^29.2.0",
     "@types/jsonwebtoken": "^8.5.5",
-    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.68",
     "@types/supertest": "^2.0.11",
     "jest": "^29.2.0",
@@ -29,7 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.5-lts.1"
+    "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
